# Knockoff-Dino-Game

./: CMakeLists.txt  README.md
src/: application.cpp  application.h  obstacle.cpp  obstacle.h  player.cpp  player.h  util.cpp  util.h
